--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ PORT = 8080
 MONGO_USER = CoderUser 
 MONGO_PASSWORD = 123
 MONGO_DB= ecommerce
+
+GITHUB_CLIENT_ID = Iv1.70544cdfda3e8104
+GITHUB_CLIENT_SECRET = 35b4bbdc819f85bb1ddd73fb873a7f76adf56be3
+GITHUB_CALLBACK_URL = http://localhost:8080/api/sessions/githubCallback
